# LibraryAPI

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  utils.py
config/: db.py
routes/: student.py
schema/: models.py
